name:                graphite
version:             0.1.0.0
synopsis:            Bar and line graphs
description:         Please see README.md
homepage:            http://github.com/andrewthad/graphite#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Martin
maintainer:          andrew.thaddeus@gmail.com
copyright:           2016 Andrew Martin
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, StackedBarGraph
  build-depends:       
      base >= 4.7 && < 5
    , lucid
    , safe
    , blaze-html
    , colour
    , palette
    , diagrams-contrib
    , diagrams-core
    , diagrams-lib
    , diagrams-svg
    , vinyl
  default-language:    Haskell2010

executable example
  hs-source-dirs:      example
  main-is:             main.hs
  build-depends:       
      base >= 4.7 && < 5
    , graphite
    , vinyl
    , diagrams-svg
    , diagrams-lib
  default-language:    Haskell2010
  

source-repository head
  type:     git
  location: https://github.com/githubuser/graphite
